@@ -62,6 +62,11 @@ supported_videocodecs_software="$(cat <<- __EOF__
 		rav1e
 __EOF__
 )"
+videocodecs_nvenc="$(cat <<- __EOF__
+		h264_nvenc
+		hevc_nvenc
+__EOF__
+)"
 videocodecs_vaapi="$(cat <<- __EOF__
 		h264_vaapi
 		hevc_vaapi
@@ -71,7 +76,13 @@ __EOF__
 )"
 videocodecs_qsv="$(cat <<- __EOF__
 		h264_qsv
-		hevc_vaapi
+		hevc_qsv
+__EOF__
+)"
+supported_videocodecs_hardware="$(cat <<- __EOF__
+		$videocodecs_nvenc
+		$videocodecs_qsv
+		$videocodecs_vaapi
 __EOF__
 )"
 videocodecs_h264="$(cat <<- __EOF__
@@ -228,6 +239,7 @@ videocodec_settings_x264() {
 
 videocodec_settings_h264_nvenc() {
     check_component h264_nvenc encoder || component_error h264_nvenc 'video encoder' true
+    check_nvidia_gpu_device
     video_encode_codec='h264_nvenc -rc constqp -qp 15 -preset p7'
 }
 
@@ -239,6 +251,7 @@ videocodec_settings_h264_vaapi() {
 
 videocodec_settings_h264_qsv() {
     check_component h264_qsv encoder || component_error h264_qsv 'video encoder' true
+    check_qsv_device
     video_encode_codec='h264_qsv -global_quality 21 -preset:v veryslow -rdo 1'
 }
 
@@ -271,6 +284,7 @@ videocodec_settings_svt_hevc() {
 
 videocodec_settings_hevc_nvenc() {
     check_component hevc_nvenc encoder || component_error hevc_nvenc 'video encoder' true
+    check_nvidia_gpu_device
     video_encode_codec='hevc_nvenc -rc constqp -qp 15 -preset p7'
 }
 
@@ -282,6 +296,7 @@ videocodec_settings_hevc_vaapi() {
 
 videocodec_settings_hevc_qsv() {
     check_component hevc_qsv encoder || component_error hevc_qsv 'video encoder' true
+    check_qsv_device
     video_encode_codec='hevc_qsv -global_quality 25 -preset:v veryslow -rdo 1'
 }
 
